force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/AccountingManager__c.field-meta.xml
<CustomField>
    <fullName>AccountingManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__PaymentTo__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Request (Accounting Manager)</relationshipLabel>
    <relationshipName>Payment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>