force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/AccountingManagersEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountingManagersEmail__c</fullName>
    <formula>AccountingManager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Manager&apos;s Email</label>
    <type>Text</type>
</CustomField>