force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <formula>TEXT(BeneficiaryBankAccount__r.AccountType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>