force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Amount_requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_requested__c</fullName>
    <label>Amount requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>