force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Amount_requested_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_requested_USD__c</fullName>
    <label>Amount requested (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>