force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Amount_requested_VND__c.field-meta.xml
<CustomField>
    <fullName>Amount_requested_VND__c</fullName>
    <label>Amount requested (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>