force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountName__c</fullName>
    <formula>BeneficiaryBankAccount__r.clofor_com_cfs__BankAccountNameInLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account Name</label>
    <type>Text</type>
</CustomField>