force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BankAccountNameinEnglish__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNameinEnglish__c</fullName>
    <formula>BeneficiaryBankAccount__r.clofor_com_cfs__BankAccountNameInEng__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account Name in English</label>
    <type>Text</type>
</CustomField>