force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <formula>BeneficiaryBankAccount__r.clofor_com_cfs__BankAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account Number</label>
    <type>Text</type>
</CustomField>