force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <formula>BeneficiaryBankAccount__r.BankCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Code</label>
    <type>Text</type>
</CustomField>