force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BankNameinEnglish__c.field-meta.xml
<CustomField>
    <fullName>BankNameinEnglish__c</fullName>
    <formula>BeneficiaryBankAccount__r.BankNameinEnglish__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Name in English</label>
    <type>Text</type>
</CustomField>