force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/Beneficiary_information__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_information__c</fullName>
    <label>Beneficiary information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>