force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BeneficiaryBankAccount__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__BankAccount__c.clofor_com_cfs__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.clofor_com_cfs__PaymentTo__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipLabel>Payment Request (Beneficiary Bank Account)</relationshipLabel>
    <relationshipName>Payment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>