force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BranchAddressinEnglish__c.field-meta.xml
<CustomField>
    <fullName>BranchAddressinEnglish__c</fullName>
    <formula>BeneficiaryBankAccount__r.BranchAddressinEnglish__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Address in English</label>
    <type>Text</type>
</CustomField>