force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <formula>BeneficiaryBankAccount__r.BranchCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>