force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <formula>BeneficiaryBankAccount__r.BranchName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>