force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__ACCOUNTANT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACCOUNTANT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACCOUNTANT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accoutant</relationshipName>
    <type>Lookup</type>
</CustomField>