force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__ActualReturnedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualReturnedDate__c</fullName>
    <label>ACTUAL RETURNED DATE</label>
    <type>Date</type>
</CustomField>