force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__AdditionalAmountPayFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AdditionalAmountPayFCY__c</fullName>
    <label>Additional Amount Pay to Staff(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>