force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__AmountCollectTextLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountCollectTextLocal__c</fullName>
    <label>AMOUNT FOR COLLECTION-TEXT(LOCAL)</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>