force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__AmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountLocal__c</fullName>
    <label>AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>