force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__AmountPaidFCYCashRollup__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidFCYCashRollup__c</fullName>
    <label>Amount Paid(FCY)-Cash Rollup</label>
    <summarizedField>clofor_com_cfs__PayReqCash__c.clofor_com_cfs__AmountPaidFCYforTrxPlan__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__PayReqCash__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>