force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__AmountPaidLocalBankRollup__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidLocalBankRollup__c</fullName>
    <label>Amount Paid(Local)-Bank Rollup</label>
    <summarizedField>clofor_com_cfs__PayReqBank__c.clofor_com_cfs__AmountPaidLocalforTrxPlan__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__PayReqBank__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>