force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__AmountTextLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountTextLocal__c</fullName>
    <label>AMOUNT-TEXT(LOCAL)</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>