force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__AmountUSDForCollection__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountUSDForCollection__c</fullName>
    <label>AMOUNT(USD) FOR COLLECTION</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>