force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__AvailableAmountAfterDeductFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AvailableAmountAfterDeductFCY__c</fullName>
    <formula>clofor_com_cfs__BalAdvanceCashFCY__c - clofor_com_cfs__AmountAdvancedPaidFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount after Deduct(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>