force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__BalAdvanceCash__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BalAdvanceCash__c</fullName>
    <formula>clofor_com_cfs__CashAdvanceID__r.clofor_com_cfs__BalAdvanceCash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance of Advance Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>