force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__BalAdvanceCashFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BalAdvanceCashFCY__c</fullName>
    <formula>clofor_com_cfs__CashAdvanceID__r.clofor_com_cfs__BalAdvanceCashFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance of Advance Cash(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>