force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__CostType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CostType__c</fullName>
    <label>COST TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CostType</valueSetName>
    </valueSet>
</CustomField>