force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__CreditACName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CreditACName__c</fullName>
    <label>CREDIT A/C NAME</label>
    <type>TextArea</type>
</CustomField>