force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__CreditACNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CreditACNumber__c</fullName>
    <label>CREDIT A/C NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>