force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__DifferenceLeftLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DifferenceLeftLocal__c</fullName>
    <formula>clofor_com_cfs__ExpectedReturnAmountLocal__c -  clofor_com_cfs__ReturnedAmountLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Left(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>