force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__Director__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TrxPlanDirector</relationshipName>
    <type>Lookup</type>
</CustomField>