force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__ExpectedReturnAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpectedReturnAmountLocal__c</fullName>
    <label>Expected Return Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>