force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__HowToConnectSourceToTrx__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HowToConnectSourceToTrx__c</fullName>
    <label>HOW TO CONNECT SOURCE TO TRX PLAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__HowToConnectSourceToTrx</valueSetName>
    </valueSet>
</CustomField>