force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__InternalRequestManager__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InternalRequestManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INTERNAL REQUESTER MANAGER</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TrxPlanInternalReqManager</relationshipName>
    <type>Lookup</type>
</CustomField>