force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__InvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoiceTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRX PLAN (INVOICE TO)</relationshipLabel>
    <relationshipName>TrxPlanInvoiceTo</relationshipName>
    <type>Lookup</type>
</CustomField>