force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__LiquidationTargetMaxNoDays__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LiquidationTargetMaxNoDays__c</fullName>
    <formula>clofor_com_cfs__CashAdvanceID__r.clofor_com_cfs__LiquidationTargetMaxNoDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>#NAME?</inlineHelpText>
    <label>Liquidation Target-Max No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>