force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__Lock_Attachment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Lock_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Attachment</label>
    <type>Checkbox</type>
</CustomField>