force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__mm_CompanyLogo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_CompanyLogo__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Logo_URL__c</formula>
    <label>Mail Merge Company Logo</label>
    <type>Text</type>
</CustomField>