force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__mm_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_CompanyName__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Company Name</label>
    <type>Text</type>
</CustomField>