force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__mm_DebitACBankName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_DebitACBankName__c</fullName>
    <formula>clofor_com_cfs__DebitAC__r.clofor_com_cfs__BankOfficialName__c</formula>
    <label>Debit A/C Bank Name</label>
    <type>Text</type>
</CustomField>