force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__NotesinDocument__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NotesinDocument__c</fullName>
    <label>Notes in Document</label>
    <type>TextArea</type>
</CustomField>