force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__OffseRemainedSellingAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffseRemainedSellingAmountFCY__c</fullName>
    <formula>IF(clofor_com_cfs__OffsetRequestedAmountFCY__c &lt;&gt; 0, clofor_com_cfs__OffsetRequestedAmountFCY__c -  clofor_com_cfs__RUOffsetProcessedSellingAmountFCY__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Remained Selling Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>