force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__OffsetProcessPayableTrxOut__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetProcessPayableTrxOut__c</fullName>
    <label>Offset Process Payable-Trx Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>