force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__OffsetRequestedAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetRequestedAmountFCY__c</fullName>
    <formula>MIN(clofor_com_cfs__RollupFMSUnpaidBalOfBuyingUSD__c,clofor_com_cfs__RollupFMSUnreceivedBalOfSellUSD__c)</formula>
    <label>Offset Requested Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>