force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__OffsetRequestedAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OffsetRequestedAmountLocal__c</fullName>
    <formula>MIN(clofor_com_cfs__RollupFMSUnpaidBalOfBuyingLocal__c,clofor_com_cfs__RollupFMSUnreceivedBalOfSellLocal__c)</formula>
    <label>Offset Requested Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>