force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__PaymentConfirmedTrxOut__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentConfirmedTrxOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmed-Trx Out</label>
    <type>Checkbox</type>
</CustomField>