force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentDueDate__c</fullName>
    <label>PAYMENT DUE DATE</label>
    <type>Date</type>
</CustomField>