force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__PaymentRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentRequestStatus__c</fullName>
    <label>PAYMENT REQUEST STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PaymentRequestStatus</valueSetName>
    </valueSet>
</CustomField>