force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__PaymentSourceCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentSourceCategory__c</fullName>
    <label>PAYMENT SOURCE CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PaymentSourceCategory</valueSetName>
    </valueSet>
</CustomField>