force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRX PLAN(PAYMENT TO)</relationshipLabel>
    <relationshipName>TrxPlan</relationshipName>
    <type>Lookup</type>
</CustomField>