force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__PlannedProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlannedProcessingDate__c</fullName>
    <label>PLANNED PROCESSING DATE</label>
    <type>Date</type>
</CustomField>