force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__PreviousTrxlanRecordType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousTrxlanRecordType__c</fullName>
    <formula>clofor_com_cfs__PreviousTrxPlanID__r.RecordType.DeveloperName</formula>
    <label>Previous Trx Plan Record Type</label>
    <type>Text</type>
</CustomField>