force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__PreviousTrxPlanID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousTrxPlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Trx Plan meet below two conditions will appear. 1) Approval Status=Approved, 2) Plan Status not equal to Liquidation Request Processed.</inlineHelpText>
    <label>Previous Trx Plan ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__PaymentRequest__c.clofor_com_cfs__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <filterItems>
            <field>clofor_com_cfs__PaymentRequest__c.clofor_com_cfs__PaymentRequestStatus__c</field>
            <operation>notEqual</operation>
            <value>Liquidation Request Processed</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__PaymentRequest__c</referenceTo>
    <relationshipLabel>NEXT TRX PLAN</relationshipLabel>
    <relationshipName>TrxPlan</relationshipName>
    <type>Lookup</type>
</CustomField>