force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__ProcessPayableLiquidation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProcessPayableLiquidation__c</fullName>
    <label>Process Payable-Liquidation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>