force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__ReceiptConfirmedTrxIn__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceiptConfirmedTrxIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Confirmed-Trx In</label>
    <type>Checkbox</type>
</CustomField>