force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RequesterAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RequesterAddress__c</fullName>
    <label>REQUESTER ADDRESS</label>
    <type>TextArea</type>
</CustomField>