force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RequesterDepartment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RequesterDepartment__c</fullName>
    <label>REQUESTER DEPARTMENT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Department</valueSetName>
    </valueSet>
</CustomField>