force-app/main/default/objects/clofor_com_cfs__PaymentRequest__c/fields/clofor_com_cfs__RollupFMSUnreceivedBalOfSellUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSUnreceivedBalOfSellUSD__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL SELLING(USD)</label>
    <summarizedField>clofor_com_cfs__FMSBillPayReq__c.clofor_com_cfs__FMSUnreceivedBalOfSellingUSDTrx__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__FMSBillPayReq__c.clofor_com_cfs__BillInvToSameTrxPlan__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__FMSBillPayReq__c.clofor_com_cfs__PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>